<resources>
    <string name="app_name">FoodFast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="payment">Payment</string>
    <string name="easy">Easy</string>
    <string name="food_fast">FOOD FAST</string>
    <string name="mobile_num">Mobile Num</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="sign_up">Sign Up</string>
</resources>